# ochki

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/zookeeper-client-ck/: Cargo.toml
crates/zookeeper-client-ck/src/client/: mod.rs
crates/zookeeper-client-ck/src/session/: mod.rs
src/: cli.rs  client.rs  lib.rs  main.rs  output.rs  repl.rs  style.rs
src/commands/: acl.rs  auth.rs  cp.rs  create.rs  delete.rs  diff.rs  dump.rs  exists.rs  find.rs  get.rs  health.rs  load.rs  ls.rs  mod.rs  mv.rs  set.rs  stat.rs  tree.rs  watch.rs
tests/: completion_test.rs  crud_test.rs  edge_cases_test.rs  ops_test.rs  recursive_test.rs
tests/common/: mod.rs
