[package]
name = "ochki"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "Unified ZooKeeper / ClickHouse Keeper CLI"
license = "MIT"
repository = "https://github.com/undefopp/ochki"

[dependencies]
zookeeper-client-ck = { version = "0.11.0", path = "crates/zookeeper-client-ck", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rustyline = "18"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
regex = "1"
ctrlc = "3"

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = ["zookeeper"] }
tempfile = "3"
assert_cmd = "2"
